works in chrome, and firefox if you disable protection (mixed content error)

--- a/www/www/nginx.conf
+++ b/www/www/nginx.conf
@@ -12,38 +12,37 @@ events {
 
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-
-    access_log  /var/log/nginx/access.log  main;
-
-    sendfile        on;
-
-    keepalive_timeout  65;
-
     server {
-        listen 80;
+        listen 443 ssl;
         server_name localhost;
+        
+        include snippets/self-signed.conf;
+        include snippets/ssl-params.conf;
 
         root /usr/share/nginx/html;
 
+        location / {
+            add_header 'Access-Control-Allow-Origin' '*';
+            
+            try_files $uri $uri/ /index.html;
+        }
+
         location /getPersons {
-            add_header "Access-Control-Allow-Origin"  *;
             proxy_pass http://backend:3000/getPersons;
         }
 
         location /insertPerson {
-            add_header "Access-Control-Allow-Origin"  *;
+            add_header 'Access-Control-Allow-Origin' '*';
+
             proxy_pass http://backend:3000/insertPerson;
         }
+    }
 
-        location / {
-            add_header "Access-Control-Allow-Origin"  *;
-            try_files $uri $uri/ /index.html;
-        }
+    server {
+        listen 8000;
+        listen 80;
+        server_name _;
+        add_header 'Access-Control-Allow-Origin' '*';
+        return 301 https://$host:443$request_uri;
     }
 }
