--- a/www/docker-compose.yml
+++ b/www/docker-compose.yml
@@ -15,8 +15,14 @@ services:
       PORT: 3000
     ports:
       - "3000:3000"
+    depends_on:
+      - db
 
   www:
     image: bjarkt/take_home_www
     ports:
       - "80:80"
+      - "8000:8000"
+      - "443:443"
+    depends_on:
+      - backend
