--- a/www/docker-compose.yml
+++ b/www/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   db: 
-    image: bjarkt/take_home_db
+    image: bjarkt/opn_take_home:db
     command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ROOT_PASSWORD: password
@@ -10,7 +10,7 @@ services:
       - "3306:3306"
   
   backend:
-    image: bjarkt/take_home_backend
+    image: bjarkt/opn_take_home:backend
     environment:
       PORT: 3000
     ports:
@@ -19,10 +19,11 @@ services:
       - db
 
   www:
-    image: bjarkt/take_home_www
+    image: bjarkt/opn_take_home:www
     ports:
       - "80:80"
       - "8000:8000"
       - "443:443"
     depends_on:
       - backend
+
